= Changelog

== 2019-12-13

- <https://github.com/vmiklos/osm-gimmisn/issues/299> made "source suffix" ('*' at the end of house
  numbers) work together with "letter suffix" ('/A' at the end of house numbers), e.g. '42/A*'.

== 2019-12-12

- <https://github.com/vmiklos/osm-gimmisn/issues/291> added error handling for not valid relation
  names.

== 2019-12-10

- <https://github.com/vmiklos/osm-gimmisn/issues/296> the "invalid" way of filtering out noise is
  now applied after normalization, so e.g. "42" can silence "42 A 1".

== 2019-12-06

- <https://github.com/vmiklos/osm-gimmisn/issues/285>: HTML output uses 42/A style for
  letter-suffixed house numbers, but plain text output uses 42a to help turning the output into
  `invalid` configs.

== 2019-12-01

- <https://github.com/vmiklos/osm-gimmisn/issues/286>: fix reference vs osm diff when
  `housenumber-letters: true` is enabled

== 2019-11-29

- <https://github.com/vmiklos/osm-gimmisn/issues/267>: it is now possible to opt in for a more
  strict behavior where 42/B is not considered mapped when 42/A is already mapped.

== 2019-11-24

- <https://github.com/vmiklos/osm-gimmisn/issues/274>: fixed numeric sort for interpolation=all
  streets on the missing housenumbers page.

== 2019-11-15

- <https://github.com/vmiklos/osm-gimmisn/issues/269>: noise in the reference can be now cleaned by
  filtering out house numbers explicitly, rather than filtering for valid ranges.

== 2019-11-10

- <https://github.com/vmiklos/osm-gimmisn/issues/195>: track what source range generated what house
  numbers for more compact results.

== 2019-10-31

- <https://github.com/vmiklos/osm-gimmisn/issues/224>: a way to generate the gpx of all streets
  missing house numbers.

== 2019-10-26

- <https://github.com/vmiklos/osm-gimmisn/issues/241>: better handling of 0/0 done/total house
  numbers of a relation.

== 2019-10-22

- <https://github.com/vmiklos/osm-gimmisn/issues/237>: make OSM IDs of existing house numbers
  clickable.
