@@ -1,0 +1,2 @@
+@id	addr:street	addr:housenumber	addr:postcode	addr:housename	addr:conscriptionnumber	addr:flats	addr:floor	addr:door	addr:unit	name	@type
+6852648009	Albert utca	43/B;43/C	1119								node
