@@ -1,0 +1,2 @@
+@id	name	highway	service	surface	leisure	@type
+129914801	Albert utca	residential				way
